--- a/brunch_scraper.ipynb
+++ b/brunch_scraper.ipynb
@@ -354,12 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('/Users/davidfstevens/workspace/brunch_finder/lib/seeds/brunch_places.csv')"
+   ]
   }
  ],
  "metadata": {
